tests/baselines/reference/crashIntypeCheckObjectCreationExpression.errors.txt
crashIntypeCheckObjectCreationExpression.ts line 3 col 45: error TS2095: Could not find symbol 'X'.